--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "hyperf/process": "^2.2",
         "hyperf/rate-limit": "^2.2",
         "hyperf/redis": "^2.2",
-        "hyperf/validation": "^2.2"
+        "hyperf/signal": "^2.2",
+        "hyperf/validation": "^2.2",
+        "symfony/serializer": "^5.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~3.1.0",
