--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "hyperf/redis": "^2.2",
         "hyperf/signal": "^2.2",
         "hyperf/validation": "^2.2",
-        "symfony/serializer": "^5.3"
+        "symfony/serializer": "^5.3",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~3.1.0",
