--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "hyperf/logger": "^2.2",
         "hyperf/memory": "^2.2",
         "hyperf/model-cache": "^2.2",
+        "hyperf/paginator": "^2.2",
         "hyperf/process": "^2.2",
         "hyperf/rate-limit": "^2.2",
         "hyperf/redis": "^2.2",
